--- a/JOB_FINDER/Views/Shared/_Layout.cshtml
+++ b/JOB_FINDER/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
 
     <div>
-
+        xin chào tất cả mọi người
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
