--- a/JOB_FINDER/Views/Shared/_Layout.cshtml
+++ b/JOB_FINDER/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
 
     <div>
         xin chào tất cả mọi người
+        <h2>abchdlsss</h2>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
